--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,12 +8,18 @@
 
       $("#boton").click(function() {
 
-          alert("has pulsado");
+          $.get("home/datos",function(texto) {
+
+              $("#mitabla").append("<tr><td>"+texto+"</td></tr>");
+
+          });
+
+         
       })
     })
 </script>
 
-<table>
+<table id="mitabla">
     <tr>
         <th>textos</th>
     </tr>
