--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,24 +6,14 @@
     $(document).ready(function () {
 
 
-      $("#boton").click(function() {
+     
 
-          $.get("home/datos",function(texto) {
-
-              $("#mitabla").append("<tr><td>"+texto+"</td></tr>");
-
-          });
-
-         
-      })
+        
     })
 </script>
 
 <table id="mitabla">
-    <tr>
-        <th>textos</th>
-    </tr>
-
+   
     @foreach (var texto in ViewBag.textos)
     {
         <tr>
@@ -31,7 +21,10 @@
         </tr>
     }
 </table>
-<input type="button" value="aceptar" id="boton"/>
+<form action="formularioinsertar">
+<input type="submit" value="nuevo" id="boton"/>
+</form>
+
 
 
 
