--- a/Views/Home/ListaFacturas.cshtml
+++ b/Views/Home/ListaFacturas.cshtml
@@ -5,39 +5,19 @@
 <script type="text/javascript">
     $(document).ready(function () {
 
+        $.getJSON("/home/listafacturasjson", function (datos) {
+            for (let i = 0; i < datos.length; i++) {
 
-            $("#boton").click(function() {
+                $("#mitabla").append(`<tr>
+                                        <td>${datos[i].numero}</td>
+                                        <td>${datos[i].concepto}</td>
+                                        <td>${datos[i].importe}</td>
+                                        </tr>`);
+            }
+        })
+    });
 
 
-                $.getJSON("/home/listafacturasjson",function(datos) {
-                        console.log(datos);
-                       for (let i=0;i<datos.length;i++) {
-
-                           $("#mitabla2").append("<tr><td>"+datos[i].numero
-                                                +"</td><td>"+datos[i].concepto+"</td><td>"+
-                                                    datos[i].importe+"</td></tr>");
-                       }
-                })
-            });
-
-            $("#filtroconcepto").keyup(function() {
-
-                console.log($(this).val());
-
-                $.getJSON("/home/ListaFacturasJSONFiltro?concepto="+$(this).val(),function(datos) {
-                        console.log(datos);
-                        $("#mitabla2").empty();
-                       for (let i=0;i<datos.length;i++) {
-
-                           $("#mitabla2").append("<tr><td>"+datos[i].numero
-                                                +"</td><td>"+datos[i].concepto+"</td><td>"+
-                                                    datos[i].importe+"</td></tr>");
-                       }
-                })
-
-            })
-         
-    })
 </script>
 
 <table id="mitabla">
@@ -46,25 +26,14 @@
         <th>Concepto</th>
         <th>Importe</th>
     </tr>
-
-    @foreach (var factura in ViewBag.listaFacturas)
-    {
-        <tr>
-            <td>@factura.Numero</td>
-            <td>@factura.Concepto</td>
-            <td>@factura.Importe</td>
-
-        </tr>
-    }
-</table>
-<hr>
-filtrar concepto<input type="text" id="filtroconcepto"/>
-<table id="mitabla2">
-
-
 </table>
 
-<input type="button" value="aceptar" id="boton"/>
+
+
+
+<form action="/home/formularioinsertar">
+    <input type="submit" value="insertar" id="boton" />
+</form>
 
 
 
